k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-web
  namespace: cs-quiz-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quiz-web
  template:
    metadata:
      labels:
        app: quiz-web
    spec:
      containers:
      - image: cscbrd/quiz-app:v1.0
        name: flask-app
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-web-service
  namespace: cs-quiz-app
spec:
  selector:
    app: quiz-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
