k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cs-httproute
  namespace: cs-quiz-app
spec:
  parentRefs:
  - name: cs-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: quiz-web-service
      port: 80
